--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-dialog": "^2.0.1",
 		"@tauri-apps/plugin-shell": "^2",
+		"multi-range-slider-react": "^2.0.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -23,6 +24,8 @@
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.47",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.8",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.2.2",
 		"vite": "^5.3.1"
