--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"tauri": "tauri"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.1.0",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-dialog": "^2.0.1",
 		"@tauri-apps/plugin-shell": "^2",
