--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@dnd-kit/core": "^6.1.0",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-dialog": "^2.0.1",
+		"@tauri-apps/plugin-fs": "^2.0.2",
 		"@tauri-apps/plugin-shell": "^2",
 		"multi-range-slider-react": "^2.0.7",
 		"react": "^18.2.0",
