--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@dnd-kit/core": "^6.1.0",
 		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-clipboard-manager": "^2.0.0",
 		"@tauri-apps/plugin-dialog": "^2.0.1",
 		"@tauri-apps/plugin-fs": "^2.0.2",
 		"@tauri-apps/plugin-shell": "^2",
