--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "clipper-gui"
 version = "0.1.0"
-description = "A GUI for clipper"
+description = "A GUI for clipper."
 authors = ["flazepe"]
 edition = "2021"
 
@@ -13,13 +13,14 @@ name = "clipper_gui_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = "2"
 
 [dependencies]
 clipper = { path = "../../clipper" }
-tauri = { version = "2", features = ["protocol-asset"] }
-tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri = { version = "2", features = ["protocol-asset"] }
+tauri-plugin-clipboard-manager = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
+tauri-plugin-shell = "2"
