--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"@tauri-apps/plugin-shell": "^2",
 		"multi-range-slider-react": "^2.0.7",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"simplebar-react": "^3.2.6"
 	},
 	"devDependencies": {
 		"@tauri-apps/cli": "^2",
