--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
               uses: rust-build/rust-build.action@v1.4.5
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  SRC_DIR: src-tauri
               with:
                   RUSTTARGET: ${{ matrix.target }}
                   ARCHIVE_TYPES: ${{ matrix.archive }}
