--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
                       archive: zip
         steps:
             - uses: actions/checkout@master
+              with:
+                  repository: flazepe/clipper
+            - uses: actions/checkout@master
             - name: Compile and release
               uses: rust-build/rust-build.action@v1.4.5
               env:
