--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,33 +4,55 @@ on:
 
 jobs:
     release:
-        name: release ${{ matrix.target }}
-        runs-on: ubuntu-latest
+        permissions:
+            contents: write
         strategy:
             fail-fast: false
             matrix:
                 include:
-                    - target: x86_64-pc-windows-gnu
-                      archive: zip
-                    - target: x86_64-unknown-linux-musl
-                      archive: zip
-                    - target: x86_64-apple-darwin
-                      archive: zip
+                    - platform: "macos-latest"
+                    args: "--target aarch64-apple-darwin"
+                    - platform: "macos-latest"
+                    args: "--target x86_64-apple-darwin"
+                    - platform: "ubuntu-22.04"
+                    args: ""
+                    - platform: "windows-latest"
+                    args: ""
+        runs-on: ${{ matrix.platform }}
         steps:
             - uses: actions/checkout@master
               with:
                   repository: flazepe/clipper
                   path: clipper
-            - uses: actions/checkout@master
+
+            - uses: actions/checkout@v4
               with:
                   path: clipper-gui
-            - name: Compile and release
-              uses: rust-build/rust-build.action@v1.4.5
+
+            - name: setup node
+              uses: actions/setup-node@v4
+              with:
+                  node-version: lts/*
+
+            - name: install Rust stable
+              uses: dtolnay/rust-toolchain@stable
+              with:
+                  targets: ${{ matrix.platform == "macos-latest" && "aarch64-apple-darwin,x86_64-apple-darwin" || "" }}
+
+            - name: install dependencies (ubuntu only)
+              if: matrix.platform == "ubuntu-22.04"
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+
+            - name: install frontend dependencies
+              run: cd clipper-gui && npm i
+
+            - uses: tauri-apps/tauri-action@v0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  TOOLCHAIN_VERSION: stable
-                  SRC_DIR: clipper-gui/src-tauri
               with:
-                  RUSTTARGET: ${{ matrix.target }}
-                  ARCHIVE_TYPES: ${{ matrix.archive }}
-                  EXTRA_FILES: "LICENSE"
+                  projectPath: clipper-gui
+                  args: ${{ matrix.args }}
+                  tagName: v__VERSION__
+                  releaseName: v__VERSION__
