--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@tauri-apps/plugin-clipboard-manager": "^2.0.0",
 		"@tauri-apps/plugin-dialog": "^2.0.1",
 		"@tauri-apps/plugin-fs": "^2.0.2",
+		"@tauri-apps/plugin-os": "^2.0.0",
 		"@tauri-apps/plugin-shell": "^2",
 		"multi-range-slider-react": "^2.0.7",
 		"react": "^18.2.0",
